--- a/public/project/views/templates/admin/admin.view.client.html
+++ b/public/project/views/templates/admin/admin.view.client.html
@@ -109,7 +109,7 @@
 <form>
 <div class="form-group">
     <label>Movie Name</label>
-    <input ng-model="review.moviename"
+    <input ng-model="review.imdbMovieName"
            type="text"
            required
            class="form-control"
@@ -117,7 +117,7 @@
 </div>
 <div class="form-group">
     <label>Username</label>
-    <input ng-model="review.user_name"
+    <input ng-model="review.userName"
            type="text"
            class="form-control"
            disabled>
