--- a/public/project/views/templates/users/profile-visit.view.client.html
+++ b/public/project/views/templates/users/profile-visit.view.client.html
@@ -90,7 +90,7 @@
 <div ng-repeat="userReview in model.allUserReviews">
     <h5>Movie :
 
-        <a href="#!/user/movies/{{userReview.movieID}}" class="btn btn-link"> {{userReview.moviename}}</a></h5>
+        <a href="#!/user/movies/{{userReview.movieId}}" class="btn btn-link"> {{userReview.imdbMovieName}}</a></h5>
     <h5>
         <a >
             <span class="glyphicon glyphicon-thumbs-down pull-right">{{userReview.dislike.length}}</span></a>
