--- a/public/css/style.css
+++ b/public/css/style.css
@@ -467,6 +467,9 @@ span.shortline5 {
 	width : 780px;
 	width : 85%;
 }
+#screenMargin{
+	margin: 10px;
+}
 #screen3{
 	width : 780px;
 	width : 85%;
